# testeRend

./: CMakeLists.txt  README.md
include/: parser.hpp  str.hpp  sys.hpp
sources/: main.cpp  parser.cpp  str.cpp  sys.cpp
